[DEV] ✨ Fixing openapi.yaml specs + Dev `withJSONAndFileBytesMultipart`
